exports[`operations/getContact.ts`] = `/*
 * AllOf Example
 *
 * OpenAPI spec version: 1.0
 * 
 * Generated by: https://principle.tools
 */
import { HttpHeaders, HttpQuery, RequestOpts, ResponseArgs, throwIfNullOrUndefined, encodeURI, RequestConversion, StandardResponse, TransformRequest } from '@principlestudios/openapi-codegen-typescript';
import {
    ContactWithId,
} from './../models/ContactWithId';

export type RequestParams = {
};
export type RequestBodies = {
};

export type StructuredResponses = {
    /** OK */
    200: {
        'application/json': ContactWithId;
    };
};
export type Responses = 
    | StandardResponse<200, 'application/json', ContactWithId>;

export function getContact(params: RequestParams): RequestOpts;
export function getContact(params: RequestParams): RequestOpts {
    throwIfNullOrUndefined(params, 'params');

    const headers: HttpHeaders = {};

    return {
        path: '/contact',
        method: 'GET',
        headers,
    };
}

export const responseConversion = (res: ResponseArgs) => ({
        statusCode: [
            200,
        ].indexOf(res.status) === -1 ? 'other' : res.status,
        mimeType: res.getResponseHeader("Content-Type"),
        data: res.response,
        response: res,
    }) as Responses;

export const conversion: RequestConversion<RequestParams, {}, Responses, 'no-body'> = {
    request: getContact,
    response: responseConversion,
};

`;

exports[`operations/index.ts`] = `/*
 * AllOf Example
 *
 * OpenAPI spec version: 1.0
 * 
 * Generated by: https://principle.tools
 */
import { conversion as getContact } from './getContact';

export default {
    getContact,
} as const;
`;

exports[`models/Contact.ts`] = `/*
 * AllOf Example
 *
 * OpenAPI spec version: 1.0
 * 
 * Generated by: https://principle.tools
 */

/**
 * @export
 * @interface Contact
 */
export type Contact = {
    /**
     * @type string
     */
    firstName: string;
    /**
     * @type string
     */
    lastName: string;
    /**
     * @type string
     */
    id?: string;
};
`;

exports[`models/ContactWithId.ts`] = `/*
 * AllOf Example
 *
 * OpenAPI spec version: 1.0
 * 
 * Generated by: https://principle.tools
 */

/**
 * @export
 * @interface ContactWithId
 */
export type ContactWithId = {
    /**
     * @type string
     */
    firstName: string;
    /**
     * @type string
     */
    lastName: string;
    /**
     * @type string
     */
    id: string;
};
`;

exports[`models/RequiredId.ts`] = `/*
 * AllOf Example
 *
 * OpenAPI spec version: 1.0
 * 
 * Generated by: https://principle.tools
 */

/**
 * @export
 * @interface RequiredId
 */
export type RequiredId = {
    /**
     * @type string
     */
    id: string;
};
`;

